--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "fontawesome": "^5.6.3",
     "moment": "^2.29.4",
     "pinia": "^2.0.21",
+    "vee-validate": "^4.6.7",
     "vue": "^3.2.38",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "yup": "^0.32.11"
   },
   "description": "This template should help get you started developing with Vue 3 in Vite.",
   "devDependencies": {
