Edited the package.json to remove type checking

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "vite",
-    "build": "run-p type-check build-only",
+    "build": "run-p build-only",
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
     "build-only": "vite build",
