--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,6 @@ coverage
 *.sln
 *.sw?
 
-src/assets/webfonts
-src/assets/css/all.css
-src/assets/css/all.min.css
+#src/assets/webfonts
+#src/assets/css/all.css
+#src/assets/css/all.min.css
